<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_5sdp">

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/_13sdp"
        android:paddingBottom="@dimen/_5sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans_date_time_label"
            android:paddingRight="@dimen/_10sdp" />

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_method_label"
                android:paddingRight="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txt_method"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_mode_label"
                android:paddingRight="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txt_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_type_label" />

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingBottom="@dimen/_5sdp" />

            <LinearLayout
                android:id="@+id/pay_for_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_pay_for_label" />

                <TextView
                    android:id="@+id/txt_payment_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/_5sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_operator_name_label"
                android:paddingTop="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/txt_operator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_operator_number_label"
                android:paddingTop="@dimen/_5sdp" />

            <TextView
                android:id="@+id/txt_operator_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_reference_label" />

            <TextView
                android:id="@+id/txt_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingBottom="@dimen/_10sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:layout_marginLeft="@dimen/_minus10sdp"
                android:layout_marginStart="@dimen/_minus10sdp">

                <TextView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_minus60sdp"
                    android:layout_marginLeft="@dimen/_minus60sdp"
                    android:layout_marginTop="@dimen/_52sdp"
                    android:gravity="center"
                    android:rotation="270"
                    android:text="@string/trans_validation_label" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_25sdp">

                    <ImageView
                        android:id="@+id/img_online_validation"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_validation" />

                    <LinearLayout
                        android:id="@+id/offline_validation_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_2sdp"
                            android:background="@android:color/black" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="@dimen/_2sdp"
                                android:layout_height="match_parent"
                                android:background="@android:color/black" />

                            <ImageView
                                android:id="@+id/img_offline_validation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="@dimen/_2sdp"
                                android:layout_height="match_parent"
                                android:background="@android:color/black" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_2sdp"
                            android:background="@android:color/black" />
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
