<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_payment_round"
        android:layout_above="@+id/qr_code_form"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/_25sdp"/>

    <FrameLayout
        android:id="@+id/qr_code_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:alpha="0.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_please_scan"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/txt_qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@android:color/white"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="@string/payment_serial_label"
                android:inputType="textCapWords|textPhonetic"
                android:maxLines="1"
                android:padding="@dimen/_5sdp" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_continue_label"
                android:layout_weight="1"
                android:background="@color/colorBlue"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>