<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bg_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_offline"
        android:paddingTop="@dimen/_45sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/trans_amount_label"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PHP 00.00"
            android:textColor="@android:color/white"
            android:paddingBottom="@dimen/_8sdp" />

        <TextView
            android:id="@+id/txt_account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingBottom="@dimen/_8sdp" />

        <LinearLayout
            android:id="@+id/card_holder_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/trans_card_holder_label"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/trans_expiry_label"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_expiry_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MM / YY"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>